--- a/apple.html
+++ b/apple.html
@@ -31,7 +31,7 @@
 <br>
 <br>
 <a href="">
-<img src="/Users/noradelsierra/Desktop/appleClone_CP/iphone.jpg" alt="iphone">
+<img src="/Users/noradelsierra/Desktop/appleClone_CP/iphone.JPG" alt="iphone">
 </a>    
 
 </body>
